# BBPE-Tokenizer

./: README.md
BBPE_Tokenizer/: Cargo.toml  tokenizer.json
BBPE_Tokenizer/pretokenized_output/: decoded.txt  encoded.txt  merges.json  outputs.txt  test_data.txt  vocab.json
BBPE_Tokenizer/src/: bpe_main.rs  main.rs
BBPE_Tokenizer/src/dataset/: data.json  datas.jsonl  datas1.jsonl
BBPE_Tokenizer/src/tokenizer/: added_vocabulary.rs  bpe.rs  bpe_trainer.rs  bpe_trainer23.rs  cache.rs  first_last_iterator.rs  mod.rs  pair.rs  parallelism.rs  pre_tokenizer.rs  progress.rs  result.rs  word.rs
