[package]
name = "tokenizer_demo_project"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
rayon-cond = "0.1"
regex = "1.10"
aho-corasick = "1.1"
thiserror = "1.0"
rand = "0.8"
indicatif = { version = "0.17", optional = true }
fancy-regex = "0.13"
rustc-hash = "1.1.0"
fxhash = "0.2.1"
pyo3 = { version = "0.21", optional = true }
bstr = "1.12" # ADDED: Required by src/tokenizer/bpe.rs

[features]
default = [] # Added if not present already, for clarity.
progressbar = ["indicatif"]
python = ["pyo3"]
random = [] # ADDED: To satisfy #[cfg(feature = "random")] in word.rs

[[bin]]
name = "bpe_main"
path = "src/bpe_main.rs"
